@@ -16,8 +16,6 @@
 
 package com.swirlds.demo.platform;
 
-import static com.hedera.hapi.platform.event.EventTransaction.TransactionOneOfType.APPLICATION_TRANSACTION;
-import static com.hedera.hapi.platform.event.EventTransaction.TransactionOneOfType.STATE_SIGNATURE_TRANSACTION;
 import static com.swirlds.platform.state.service.schemas.V0540PlatformStateSchema.PLATFORM_STATE_KEY;
 import static com.swirlds.platform.state.service.schemas.V0540RosterBaseSchema.ROSTER_STATES_KEY;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -31,10 +29,8 @@ import com.hedera.hapi.node.base.SemanticVersion;
 import com.hedera.hapi.node.base.Timestamp;
 import com.hedera.hapi.node.state.roster.Roster;
 import com.hedera.hapi.platform.event.EventCore;
-import com.hedera.hapi.platform.event.EventTransaction;
 import com.hedera.hapi.platform.event.GossipEvent;
 import com.hedera.hapi.platform.event.StateSignatureTransaction;
-import com.hedera.pbj.runtime.OneOf;
 import com.hedera.pbj.runtime.io.buffer.Bytes;
 import com.swirlds.common.RosterStateId;
 import com.swirlds.common.context.PlatformContext;
@@ -64,7 +60,6 @@ import com.swirlds.platform.crypto.PlatformSigner;
 import com.swirlds.platform.crypto.PublicStores;
 import com.swirlds.platform.event.AncientMode;
 import com.swirlds.platform.event.PlatformEvent;
-import com.swirlds.platform.gossip.shadowgraph.Generations;
 import com.swirlds.platform.internal.ConsensusRound;
 import com.swirlds.platform.state.service.PlatformStateService;
 import com.swirlds.platform.system.BasicSoftwareVersion;
@@ -88,7 +83,6 @@ import java.util.Random;
 import java.util.concurrent.Future;
 import java.util.function.Consumer;
 import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.MockedStatic;
@@ -98,9 +92,8 @@ class PlatformTestingToolStateTest {
     private static final String DEFAULT_CONFIG = "configs/FCM1KForTest.json";
     private static final String CONFIG_WITHOUT_APPEND_SIG = "configs/FCM1KForTestWithoutAppendSig.json";
     private static final byte[] EMPTY_ARRAY = new byte[] {};
-    private static PlatformTestingToolStateLifecycles stateLifecycles;
-    private static PlatformTestingToolState state;
-    private static MockedStatic<ParameterProvider> parameterProvider;
+    private PlatformTestingToolState state;
+    private MockedStatic<ParameterProvider> parameterProvider;
     private Consumer<ScopedSystemTransaction<StateSignatureTransaction>> consumer;
     private List<ScopedSystemTransaction<StateSignatureTransaction>> consumedSystemTransactions;
     private StateSignatureTransaction stateSignatureTransaction;
@@ -112,21 +105,13 @@ class PlatformTestingToolStateTest {
     private Roster roster;
     private EventWindow eventWindow;
 
-    @BeforeAll
-    static void createState() {
-        final PayloadCfgSimple payloadConfig = mock(PayloadCfgSimple.class);
-        when(payloadConfig.isAppendSig()).thenReturn(true);
-
-        state = mock(PlatformTestingToolState.class);
-
-        final ExpectedFCMFamily expectedFCMFamily = mock(ExpectedFCMFamily.class);
-        when(state.getStateExpectedMap()).thenReturn(expectedFCMFamily);
-
-        stateLifecycles = new PlatformTestingToolStateLifecycles();
-    }
-
     @BeforeEach
     void setUp() throws KeyStoreException, KeyGeneratingException, NoSuchAlgorithmException, NoSuchProviderException {
+        final PayloadCfgSimple payloadConfig = mock(PayloadCfgSimple.class);
+        when(payloadConfig.isAppendSig()).thenReturn(true);
+        state = mock(PlatformTestingToolState.class);
+        final ExpectedFCMFamily expectedFCMFamily = mock(ExpectedFCMFamily.class);
+        when(state.getStateExpectedMap()).thenReturn(expectedFCMFamily);
         main = new PlatformTestingToolMain();
         random = new Random();
         roster = new Roster(Collections.EMPTY_LIST);
@@ -144,7 +129,7 @@ class PlatformTestingToolStateTest {
         final Randotron randotron = Randotron.create();
 
         final KeysAndCerts keysAndCerts =
-                KeysAndCerts.generate("a-name", EMPTY_ARRAY, EMPTY_ARRAY, EMPTY_ARRAY, new PublicStores());
+                KeysAndCerts.generate(NodeId.FIRST_NODE_ID, EMPTY_ARRAY, EMPTY_ARRAY, EMPTY_ARRAY, new PublicStores());
 
         final PlatformSigner signer = new PlatformSigner(keysAndCerts);
         final Hash stateHash = randotron.nextHash();
@@ -172,7 +157,7 @@ class PlatformTestingToolStateTest {
         when(transaction.getApplicationTransaction()).thenReturn(Bytes.wrap(testTransactionWrapper.toByteArray()));
 
         // When
-        stateLifecycles.onHandleConsensusRound(round, state, consumer);
+        main.stateLifecycles.onHandleConsensusRound(round, state, consumer);
 
         // Then
         assertThat(consumedSystemTransactions).isEmpty();
@@ -188,7 +173,7 @@ class PlatformTestingToolStateTest {
         when(transaction.getApplicationTransaction()).thenReturn(stateSignatureTransactionBytes);
 
         // When
-        stateLifecycles.onHandleConsensusRound(round, state, consumer);
+        main.stateLifecycles.onHandleConsensusRound(round, state, consumer);
 
         // Then
         assertThat(consumedSystemTransactions).hasSize(1);
@@ -204,7 +189,7 @@ class PlatformTestingToolStateTest {
         when(transaction.getApplicationTransaction()).thenReturn(stateSignatureTransactionBytes);
 
         // When
-        stateLifecycles.onHandleConsensusRound(round, state, consumer);
+        main.stateLifecycles.onHandleConsensusRound(round, state, consumer);
 
         // Then
         assertThat(consumedSystemTransactions).hasSize(1);
@@ -237,36 +222,16 @@ class PlatformTestingToolStateTest {
                 roster,
                 List.of(platformEvent),
                 platformEvent,
-                new Generations(),
                 eventWindow,
                 new ConsensusSnapshot(),
                 false,
                 Instant.now());
 
         // When
-        stateLifecycles.onHandleConsensusRound(round, state, consumer);
+        main.stateLifecycles.onHandleConsensusRound(round, state, consumer);
 
         // Then
         assertThat(consumedSystemTransactions).hasSize(3);
-    }
-
-    @Test
-    void handleConsensusRoundWithDeprecatedSystemTransaction() {
-        // Given
-        givenInitState(DEFAULT_CONFIG);
-        givenRoundAndEvent();
-
-        final byte[] transactionBytes = new byte[300];
-        random.nextBytes(transactionBytes);
-
-        when(transaction.getApplicationTransaction()).thenReturn(Bytes.wrap(transactionBytes));
-        when(transaction.isSystem()).thenReturn(true);
-
-        // When
-        stateLifecycles.onHandleConsensusRound(round, state, consumer);
-
-        // Then
-        assertThat(consumedSystemTransactions).isEmpty();
     }
 
     @Test
@@ -277,16 +242,14 @@ class PlatformTestingToolStateTest {
 
         final TestTransactionWrapper testTransactionWrapper = getTransactionWithRandomType(300);
 
-        final EventTransaction eventTransaction = new EventTransaction(
-                new OneOf<>(APPLICATION_TRANSACTION, Bytes.wrap(testTransactionWrapper.toByteArray())));
         final EventCore eventCore = mock(EventCore.class);
         final GossipEvent gossipEvent =
-                new GossipEvent(eventCore, null, List.of(eventTransaction), Collections.emptyList());
+                new GossipEvent(eventCore, null, List.of(Bytes.wrap(testTransactionWrapper.toByteArray())));
         when(eventCore.timeCreated()).thenReturn(Timestamp.DEFAULT);
         platformEvent = new PlatformEvent(gossipEvent);
 
         // When
-        stateLifecycles.onPreHandle(platformEvent, state, consumer);
+        main.stateLifecycles.onPreHandle(platformEvent, state, consumer);
 
         // Then
         assertThat(consumedSystemTransactions).isEmpty();
@@ -299,16 +262,13 @@ class PlatformTestingToolStateTest {
         givenRoundAndEvent();
 
         final Bytes stateSignatureTransactionBytes = main.encodeSystemTransaction(stateSignatureTransaction);
-        final EventTransaction eventTransaction =
-                new EventTransaction(new OneOf<>(APPLICATION_TRANSACTION, stateSignatureTransactionBytes));
         final EventCore eventCore = mock(EventCore.class);
-        final GossipEvent gossipEvent =
-                new GossipEvent(eventCore, null, List.of(eventTransaction), Collections.emptyList());
+        final GossipEvent gossipEvent = new GossipEvent(eventCore, null, List.of(stateSignatureTransactionBytes));
         when(eventCore.timeCreated()).thenReturn(Timestamp.DEFAULT);
         platformEvent = new PlatformEvent(gossipEvent);
 
         // When
-        stateLifecycles.onPreHandle(platformEvent, state, consumer);
+        main.stateLifecycles.onPreHandle(platformEvent, state, consumer);
 
         // Then
         assertThat(consumedSystemTransactions).hasSize(1);
@@ -321,51 +281,35 @@ class PlatformTestingToolStateTest {
 
         final Bytes stateSignatureTransactionBytes = main.encodeSystemTransaction(stateSignatureTransaction);
 
-        final EventTransaction eventTransaction =
-                new EventTransaction(new OneOf<>(APPLICATION_TRANSACTION, stateSignatureTransactionBytes));
-        final EventTransaction secondEventTransaction =
-                new EventTransaction(new OneOf<>(APPLICATION_TRANSACTION, stateSignatureTransactionBytes));
-        final EventTransaction thirdEventTransaction =
-                new EventTransaction(new OneOf<>(APPLICATION_TRANSACTION, stateSignatureTransactionBytes));
         final EventCore eventCore = mock(EventCore.class);
         final GossipEvent gossipEvent = new GossipEvent(
                 eventCore,
                 null,
-                List.of(eventTransaction, secondEventTransaction, thirdEventTransaction),
-                Collections.emptyList());
+                List.of(
+                        stateSignatureTransactionBytes,
+                        stateSignatureTransactionBytes,
+                        stateSignatureTransactionBytes));
         when(eventCore.timeCreated()).thenReturn(Timestamp.DEFAULT);
         platformEvent = new PlatformEvent(gossipEvent);
 
         // When
-        stateLifecycles.onPreHandle(platformEvent, state, consumer);
+        main.stateLifecycles.onPreHandle(platformEvent, state, consumer);
 
         // Then
         assertThat(consumedSystemTransactions).hasSize(3);
     }
 
     @Test
-    void preHandleConsensusRoundWithDeprecatedSystemTransaction() {
+    void onSealDefaultsToTrue() {
         // Given
         givenInitState(DEFAULT_CONFIG);
         givenRoundAndEvent();
-        when(transaction.isSystem()).thenReturn(true);
-
-        final byte[] transactionBytes = new byte[300];
-        random.nextBytes(transactionBytes);
-
-        final EventTransaction eventTransaction =
-                new EventTransaction(new OneOf<>(STATE_SIGNATURE_TRANSACTION, transactionBytes));
-        final EventCore eventCore = mock(EventCore.class);
-        final GossipEvent gossipEvent =
-                new GossipEvent(eventCore, null, List.of(eventTransaction), Collections.emptyList());
-        when(eventCore.timeCreated()).thenReturn(Timestamp.DEFAULT);
-        platformEvent = new PlatformEvent(gossipEvent);
 
         // When
-        stateLifecycles.onPreHandle(platformEvent, state, consumer);
+        final boolean result = main.stateLifecycles.onSealConsensusRound(round, state);
 
         // Then
-        assertThat(consumedSystemTransactions).isEmpty();
+        assertThat(result).isTrue();
     }
 
     private void givenRoundAndEvent() {
@@ -379,7 +323,6 @@ class PlatformTestingToolStateTest {
                 roster,
                 List.of(platformEvent),
                 platformEvent,
-                new Generations(),
                 eventWindow,
                 new ConsensusSnapshot(),
                 false,
@@ -419,7 +362,7 @@ class PlatformTestingToolStateTest {
         when(parameterProviderInstance.getParameters()).thenReturn(new String[] {config});
 
         state.initChildren();
-        stateLifecycles.onStateInitialized(state, platform, initTrigger, new BasicSoftwareVersion(1));
+        main.stateLifecycles.onStateInitialized(state, platform, initTrigger, new BasicSoftwareVersion(1));
         main.init(platform, nodeId);
     }
 
